--- a/edit_data/Chan/regex_Filter.ipynb
+++ b/edit_data/Chan/regex_Filter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,25 +17,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\chanc\\AppData\\Local\\Temp\\ipykernel_25952\\1223631877.py:1: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  movies_df = pd.read_csv(\"source_data/movies_metadata.csv\")\n"
+      "C:\\Users\\chanc\\AppData\\Local\\Temp\\ipykernel_18964\\2407594407.py:1: DtypeWarning: Columns (11) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  movies_df = pd.read_csv(\"../../edit_data/cleaned_data/movies.csv\")\n"
      ]
     }
    ],
    "source": [
-    "movies_df = pd.read_csv(\"source_data/movies_metadata.csv\")"
+    "movies_df = pd.read_csv(\"../../edit_data/cleaned_data/movies.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,14 +47,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\chanc\\AppData\\Local\\Temp\\ipykernel_25952\\800739872.py:1: DtypeWarning: Columns (11) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\chanc\\AppData\\Local\\Temp\\ipykernel_18964\\800739872.py:1: DtypeWarning: Columns (12) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  new_df = pd.read_csv(\"../../edit_data/cleaned_data/movies.csv\")\n"
      ]
     },
@@ -79,6 +88,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0.1</th>\n",
        "      <th>Unnamed: 0</th>\n",
        "      <th>adult</th>\n",
        "      <th>belongs_to_collection</th>\n",
@@ -110,6 +120,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>{'id': 10194, 'name': 'Toy Story Collection', ...</td>\n",
        "      <td>30000000</td>\n",
@@ -137,6 +148,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
@@ -168,13 +180,17 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  adult                              belongs_to_collection  \\\n",
-       "0           0  False  {'id': 10194, 'name': 'Toy Story Collection', ...   \n",
-       "1           1  False                                                NaN   \n",
+       "   Unnamed: 0.1  Unnamed: 0  adult  \\\n",
+       "0             0           0  False   \n",
+       "1             1           1  False   \n",
        "\n",
-       "     budget                                             genres  \\\n",
-       "0  30000000  [{'id': 16, 'name': 'Animation'}, {'id': 35, '...   \n",
-       "1  65000000  [{'id': 12, 'name': 'Adventure'}, {'id': 14, '...   \n",
+       "                               belongs_to_collection    budget  \\\n",
+       "0  {'id': 10194, 'name': 'Toy Story Collection', ...  30000000   \n",
+       "1                                                NaN  65000000   \n",
+       "\n",
+       "                                              genres  \\\n",
+       "0  [{'id': 16, 'name': 'Animation'}, {'id': 35, '...   \n",
+       "1  [{'id': 12, 'name': 'Adventure'}, {'id': 14, '...   \n",
        "\n",
        "                               homepage    id    imdb_id original_language  \\\n",
        "0  http://toystory.disney.com/toy-story   862  tt0114709                en   \n",
@@ -209,7 +225,7 @@
        "1           6.9      2413.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
