--- a/edit_data/Chan/regex_Filter.ipynb
+++ b/edit_data/Chan/regex_Filter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,232 +23,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\chanc\\AppData\\Local\\Temp\\ipykernel_12364\\2407594407.py:1: DtypeWarning: Columns (16) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  movies_df = pd.read_csv(\"../../edit_data/cleaned_data/movies.csv\")\n"
-     ]
-    }
-   ],
-   "source": [
-    "movies_df = pd.read_csv(\"../../edit_data/cleaned_data/movies.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path  \n",
-    "filepath = Path('../../edit_data/cleaned_data/movies.csv')  \n",
-    "filepath.parent.mkdir(parents=True, exist_ok=True)  \n",
-    "movies_df.to_csv(filepath)  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\chanc\\AppData\\Local\\Temp\\ipykernel_12364\\800739872.py:1: DtypeWarning: Columns (17) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  new_df = pd.read_csv(\"../../edit_data/cleaned_data/movies.csv\")\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0.6</th>\n",
-       "      <th>Unnamed: 0.5</th>\n",
-       "      <th>Unnamed: 0.4</th>\n",
-       "      <th>Unnamed: 0.3</th>\n",
-       "      <th>Unnamed: 0.2</th>\n",
-       "      <th>Unnamed: 0.1</th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>adult</th>\n",
-       "      <th>belongs_to_collection</th>\n",
-       "      <th>budget</th>\n",
-       "      <th>genres</th>\n",
-       "      <th>homepage</th>\n",
-       "      <th>id</th>\n",
-       "      <th>imdb_id</th>\n",
-       "      <th>original_language</th>\n",
-       "      <th>original_title</th>\n",
-       "      <th>overview</th>\n",
-       "      <th>popularity</th>\n",
-       "      <th>poster_path</th>\n",
-       "      <th>production_companies</th>\n",
-       "      <th>production_countries</th>\n",
-       "      <th>release_date</th>\n",
-       "      <th>revenue</th>\n",
-       "      <th>runtime</th>\n",
-       "      <th>spoken_languages</th>\n",
-       "      <th>status</th>\n",
-       "      <th>tagline</th>\n",
-       "      <th>title</th>\n",
-       "      <th>video</th>\n",
-       "      <th>vote_average</th>\n",
-       "      <th>vote_count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>{'id': 10194, 'name': 'Toy Story Collection', ...</td>\n",
-       "      <td>30000000</td>\n",
-       "      <td>[{'id': 16, 'name': 'Animation'}, {'id': 35, '...</td>\n",
-       "      <td>http://toystory.disney.com/toy-story</td>\n",
-       "      <td>862</td>\n",
-       "      <td>tt0114709</td>\n",
-       "      <td>en</td>\n",
-       "      <td>Toy Story</td>\n",
-       "      <td>Led by Woody, Andy's toys live happily in his ...</td>\n",
-       "      <td>21.946943</td>\n",
-       "      <td>/rhIRbceoE9lR4veEXuwCC2wARtG.jpg</td>\n",
-       "      <td>[{'name': 'Pixar Animation Studios', 'id': 3}]</td>\n",
-       "      <td>[{'iso_3166_1': 'US', 'name': 'United States o...</td>\n",
-       "      <td>1995-10-30</td>\n",
-       "      <td>373554033.0</td>\n",
-       "      <td>81.0</td>\n",
-       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
-       "      <td>Released</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Toy Story</td>\n",
-       "      <td>False</td>\n",
-       "      <td>7.7</td>\n",
-       "      <td>5415.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>65000000</td>\n",
-       "      <td>[{'id': 12, 'name': 'Adventure'}, {'id': 14, '...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>8844</td>\n",
-       "      <td>tt0113497</td>\n",
-       "      <td>en</td>\n",
-       "      <td>Jumanji</td>\n",
-       "      <td>When siblings Judy and Peter discover an encha...</td>\n",
-       "      <td>17.015539</td>\n",
-       "      <td>/vzmL6fP7aPKNKPRTFnZmiUfciyV.jpg</td>\n",
-       "      <td>[{'name': 'TriStar Pictures', 'id': 559}, {'na...</td>\n",
-       "      <td>[{'iso_3166_1': 'US', 'name': 'United States o...</td>\n",
-       "      <td>1995-12-15</td>\n",
-       "      <td>262797249.0</td>\n",
-       "      <td>104.0</td>\n",
-       "      <td>[{'iso_639_1': 'en', 'name': 'English'}, {'iso...</td>\n",
-       "      <td>Released</td>\n",
-       "      <td>Roll the dice and unleash the excitement!</td>\n",
-       "      <td>Jumanji</td>\n",
-       "      <td>False</td>\n",
-       "      <td>6.9</td>\n",
-       "      <td>2413.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Unnamed: 0.6  Unnamed: 0.5  Unnamed: 0.4  Unnamed: 0.3  Unnamed: 0.2  \\\n",
-       "0             0             0             0             0             0   \n",
-       "1             1             1             1             1             1   \n",
-       "\n",
-       "   Unnamed: 0.1  Unnamed: 0  adult  \\\n",
-       "0             0           0  False   \n",
-       "1             1           1  False   \n",
-       "\n",
-       "                               belongs_to_collection    budget  \\\n",
-       "0  {'id': 10194, 'name': 'Toy Story Collection', ...  30000000   \n",
-       "1                                                NaN  65000000   \n",
-       "\n",
-       "                                              genres  \\\n",
-       "0  [{'id': 16, 'name': 'Animation'}, {'id': 35, '...   \n",
-       "1  [{'id': 12, 'name': 'Adventure'}, {'id': 14, '...   \n",
-       "\n",
-       "                               homepage    id    imdb_id original_language  \\\n",
-       "0  http://toystory.disney.com/toy-story   862  tt0114709                en   \n",
-       "1                                   NaN  8844  tt0113497                en   \n",
-       "\n",
-       "  original_title                                           overview  \\\n",
-       "0      Toy Story  Led by Woody, Andy's toys live happily in his ...   \n",
-       "1        Jumanji  When siblings Judy and Peter discover an encha...   \n",
-       "\n",
-       "  popularity                       poster_path  \\\n",
-       "0  21.946943  /rhIRbceoE9lR4veEXuwCC2wARtG.jpg   \n",
-       "1  17.015539  /vzmL6fP7aPKNKPRTFnZmiUfciyV.jpg   \n",
-       "\n",
-       "                                production_companies  \\\n",
-       "0     [{'name': 'Pixar Animation Studios', 'id': 3}]   \n",
-       "1  [{'name': 'TriStar Pictures', 'id': 559}, {'na...   \n",
-       "\n",
-       "                                production_countries release_date  \\\n",
-       "0  [{'iso_3166_1': 'US', 'name': 'United States o...   1995-10-30   \n",
-       "1  [{'iso_3166_1': 'US', 'name': 'United States o...   1995-12-15   \n",
-       "\n",
-       "       revenue  runtime                                   spoken_languages  \\\n",
-       "0  373554033.0     81.0           [{'iso_639_1': 'en', 'name': 'English'}]   \n",
-       "1  262797249.0    104.0  [{'iso_639_1': 'en', 'name': 'English'}, {'iso...   \n",
-       "\n",
-       "     status                                    tagline      title  video  \\\n",
-       "0  Released                                        NaN  Toy Story  False   \n",
-       "1  Released  Roll the dice and unleash the excitement!    Jumanji  False   \n",
-       "\n",
-       "   vote_average  vote_count  \n",
-       "0           7.7      5415.0  \n",
-       "1           6.9      2413.0  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "new_df = pd.read_csv(\"../../edit_data/cleaned_data/movies.csv\")\n",
-    "pd.set_option('display.max_columns', None)\n",
-    "new_df.head(2)"
+    "movies_df = pd.read_csv(\"../../edit_data/cleaned_data/movies.csv\")"
    ]
   },
   {
@@ -264,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_df.drop(columns=[\"homepage\", \"poster_path\",\"imdb_id\",\"Unnamed: 0\", \"poster_path\", \"Unnamed: 0\", \"Unnamed: 0.1\", \"Unnamed: 0.2\", \"Unnamed: 0.3\", \"Unnamed: 0.4\", \"Unnamed: 0.5\", \"Unnamed: 0.6\"], axis=1, inplace=True)"
+    "movies_df.drop(columns=[\"homepage\", \"poster_path\",\"imdb_id\",\"Unnamed: 0\", \"poster_path\", \"Unnamed: 0\", \"Unnamed: 0.1\", \"Unnamed: 0.2\", \"Unnamed: 0.3\", \"Unnamed: 0.4\", \"Unnamed: 0.5\", \"Unnamed: 0.6\"], axis=1, inplace=True)"
    ]
   },
   {
@@ -408,7 +187,7 @@
     }
    ],
    "source": [
-    "new_df.head(2)"
+    "movies_df.head(2)"
    ]
   },
   {
@@ -424,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_df.rename(columns={\"adult\": \"Adult\", \"belongs_to_collection\": \"Movie_Collection\", \"budget\": \"Budget\", \"genres\": \"Genres\", \"id\": \"ID\", \"original_language\": \"Original_Language\", \"original_title\": \"Original_Title\", \"overview\": \"Overview\", \"popularity\": \"Popularity\", \"production_companies\": \"Production_Companies\", \"production_countries\": \"Production_Countries\", \"release_date\": \"Release_Date\", \"revenue\": \"Revenue\", \"runtime\": \"Runtime\", \"spoken_languages\": \"Spoken_languages\", \"status\":\"Status\", \"tagline\":\"Tagline\", \"title\":\"Title\", \"video\":\"Video\", \"vote_average\":\"Ratings\", \"vote_count\":\"Voters_Count\"},  inplace=True)"
+    "movies_df.rename(columns={\"adult\": \"Adult\", \"belongs_to_collection\": \"Movie_Collection\", \"budget\": \"Budget\", \"genres\": \"Genres\", \"id\": \"ID\", \"original_language\": \"Original_Language\", \"original_title\": \"Original_Title\", \"overview\": \"Overview\", \"popularity\": \"Popularity\", \"production_companies\": \"Production_Companies\", \"production_countries\": \"Production_Countries\", \"release_date\": \"Release_Date\", \"revenue\": \"Revenue\", \"runtime\": \"Runtime\", \"spoken_languages\": \"Spoken_languages\", \"status\":\"Status\", \"tagline\":\"Tagline\", \"title\":\"Title\", \"video\":\"Video\", \"vote_average\":\"Ratings\", \"vote_count\":\"Voters_Count\"},  inplace=True)"
    ]
   },
   {
@@ -671,7 +450,7 @@
     }
    ],
    "source": [
-    "new_df.head()"
+    "movies_df.head()"
    ]
   },
   {
@@ -694,7 +473,7 @@
     "    names = [genre[\"name\"] for genre in genres]\n",
     "    return pd.Series([ids, names], index=[\"Id\", \"Genres\"])\n",
     "\n",
-    "new_df[[\"Id\", \"Genres\"]] = new_df[\"Genres\"].apply(parse_genres)\n",
+    "movies_df[[\"Id\", \"Genres\"]] = movies_df[\"Genres\"].apply(parse_genres)\n",
     "\n"
    ]
   },
@@ -704,7 +483,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_df = new_df.drop(columns=[\"Id\"])"
+    "movies_df = movies_df.drop(columns=[\"Id\"])"
    ]
   },
   {
@@ -2680,7 +2459,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.4"
   }
  },
