--- a/edit_data/Michael/Ratings_model_testing.ipynb
+++ b/edit_data/Michael/Ratings_model_testing.ipynb
@@ -741,22 +741,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
    "id": "c682be629f49440",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-15T12:45:45.016768Z",
-     "start_time": "2024-07-15T12:45:45.007372Z"
+     "end_time": "2024-08-15T12:09:37.580126Z",
+     "start_time": "2024-08-15T12:09:37.363304Z"
     }
    },
-   "outputs": [],
    "source": [
     "mean_rating2 = mean_rating\n",
     "p = mean_rating2[\"Mean\"]\n",
     "q = mean_rating2[\"Count\"]\n",
     "Q = 500\n",
-    "mean_rating2[\"weightedRating2\"] = p + 10*(1-np.exp(-(p/Q)))"
-   ]
+    "mean_rating2[\"weightedRating2\"] = p + 10*(1-np.exp(-(q/Q)))"
+   ],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'mean_rating' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[1], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m mean_rating2 \u001B[38;5;241m=\u001B[39m \u001B[43mmean_rating\u001B[49m\n\u001B[0;32m      2\u001B[0m p \u001B[38;5;241m=\u001B[39m mean_rating2[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mMean\u001B[39m\u001B[38;5;124m\"\u001B[39m]\n\u001B[0;32m      3\u001B[0m q \u001B[38;5;241m=\u001B[39m mean_rating2[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mCount\u001B[39m\u001B[38;5;124m\"\u001B[39m]\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'mean_rating' is not defined"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
